Convert TaskClusterDAL to new framework
* Move TaskClusterDAL code into TaskClusterService/Repository
* Move models ClusteredPoint, Task, TaskCluster into new framework.model
* Add TaskClusterServiceSpec
